--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,6 @@ code {
 }
 
 .flexbox-container {
-  /* margin: auto;
-  width: 500px;
-  padding: 1em 2em; */
   display: flex;
+  justify-content: space-around;
 }
