--- a/src/components/css/dashboard.css
+++ b/src/components/css/dashboard.css
@@ -1,20 +1,3 @@
-.flexbox-container {
-  display: flex;
-}
-
-.flexbox-item {
-  width: 300px;
-  margin: 10px;
-  background-color: #f3f3f3;
-  padding: 50px 50px;
-}
-
-.flexbox-item-blank {
-  width: 200px;
-  margin: 10px;
-  padding: 50px 50px;
-}
-
 .h5 {
   font-weight: normal
 }
@@ -27,15 +10,21 @@
 
 /* Left Container */
 
+.flexbox-item-blank {
+  /* background-color: tomato; */
+  flex-shrink: 0;
+  min-width: 200px;
+  margin: 10px;
+  padding: 50px 50px;
+}
+
 .image-button {
   height: 100px;
   width: 100px;
   background-color: #f3f3f3;
   border-radius: 50%;
   border: #f3f3f3;
-  /* display: inline-block; */
   cursor: pointer;
-
 }
 
 .input {
@@ -48,6 +37,14 @@
 
 /* Right Container */
 
+.flexbox-item {
+  min-width: 300px;
+  flex-grow: 1;
+  margin: 10px;
+  background-color: #f3f3f3;
+  padding: 50px 50px;
+}
+
 .input-right {
   background-color: #f3f3f3;
   border-style: none;
@@ -55,6 +52,13 @@
   border-bottom-style: solid;
   border-width: 0.1em;
   width: 16em;
+}
+
+.flexbox-container-buttons {
+  display: flex;
+  width: 200px;
+  justify-content: space-around;
+  /* background-color: tomato; */
 }
 
 /* Header */
