--- a/src/components/css/dashboard.css
+++ b/src/components/css/dashboard.css
@@ -1,11 +1,25 @@
-.h5 {
-  font-weight: normal
-}
-
 .button {
   margin: 3em 0em 0em;
   background-color: #f3f3f3;
   cursor: pointer;
+}
+
+/* DataParser Container */
+
+.h5 {
+  font-weight: normal;
+  font-size: small;
+  padding: 2em 0em;
+}
+
+.content {
+  border-style: none;
+  border: #2896C2;
+  border-bottom-style: solid;
+  border-width: 0.1em;
+  font-size: small;
+  color: grey;
+  /* width: 16em; */
 }
 
 /* Left Container */
@@ -26,14 +40,6 @@
   cursor: pointer;
 }
 
-.input {
-  border-style: none;
-  border: #2896C2;
-  border-bottom-style: solid;
-  border-width: 0.1em;
-  width: 16em;
-}
-
 /* Right Container */
 
 .flexbox-item {
@@ -41,15 +47,6 @@
   margin: 10px;
   background-color: #f3f3f3;
   padding: 50px 50px;
-}
-
-.input-right {
-  background-color: #f3f3f3;
-  border-style: none;
-  border: #2896C2;
-  border-bottom-style: solid;
-  border-width: 0.1em;
-  width: 16em;
 }
 
 .flexbox-container-buttons {
